# youtube-transcript-summarizer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  GEMINI.md  Makefile  compose.yaml  config.py  discord_notifier.py  docker-compose.yaml  dynamic_queue_manager.py  file_manager.py  guidelines.md  list_models.py  logger.py  main.py  main.py.backup  notion.py  processing.py  prompt.py  pyproject.toml  readme.md  requirements.txt  scheduler.py  scheduler_app.py  streamlit_app.py  structure.md  summarizer.py  summary_storage.py  test_config.py  test_file_manager_updated.py  test_filename_truncation.py  test_processing_output_path.py  test_processor.py  test_sample_manager.py  test_simple.py  test_sqlite_client.py  test_summarizer.py  test_summary_storage.py  test_transcriber.py  (+5 more)
.archive/: _old_streamlit_app.py  dynamic_queue_manager.py  main.py  processor.py  queue_state.py  test_dynamic_queue.py  test_file_manager.py  test_file_manager_updated.py  test_main.py  test_processor.py  test_simple.py  test_summary_storage.py
.docker/: DockerFile  Dockerfile  start-rss-monitor-cron.sh
.docs/: SCHEDULE_SYSTEM_DESIGN.md
.github/: copilot-instructions.md
api/: __init__.py  server.py
database/: __init__.py  database_interface.py  db_factory.py  notion_client.py  notion_utils.py  sqlite_client.py  task.py  task_adapter.py
db/: __init__.py  database_interface.py  db_factory.py  notion_client.py  sqlite_client.py  task.py  task_adapter.py
docs/: tasks.md  testing.md
interfaces/: file_manager_interface.py  summarizer_interface.py  summary_storage_interface.py  (+1 more)
(+225 files in other folders)
