[project]
name = "openai-whisper"
version = "0.0.0"
description = "YouTube 影片文字轉錄與摘要工具"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.3",
  "faster-whisper==1.2.0",
  "google-generativeai==0.8.5",
  "notion-client==2.4.0",
  "openai==1.101.0",
  "python-dotenv==1.1.1",
  "pytubefix==9.4.1",
  "requests==2.32.5",
  "streamlit==1.48.1",
  "uvicorn==0.32.1",
  "whisper==1.1.10",
]

[dependency-groups]
dev = [
  "flake8",
  "httpx==0.28.1",
]

